doc and format