@@ -32,6 +32,8 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.skyscreamer.jsonassert.JSONAssert;
+import org.skyscreamer.jsonassert.JSONCompareMode;
 import org.springframework.data.annotation.Id;
 import org.springframework.data.elasticsearch.annotations.Document;
 import org.springframework.data.elasticsearch.annotations.Field;
@@ -42,7 +44,7 @@ import org.springframework.data.elasticsearch.annotations.Query;
 import org.springframework.data.elasticsearch.core.ElasticsearchOperations;
 import org.springframework.data.elasticsearch.core.SearchHits;
 import org.springframework.data.elasticsearch.core.query.StringQuery;
-import org.springframework.data.elasticsearch.repositories.custommethod.QueryParam;
+import org.springframework.data.elasticsearch.repositories.custommethod.QueryParameter;
 import org.springframework.data.projection.SpelAwareProxyProjectionFactory;
 import org.springframework.data.repository.Repository;
 import org.springframework.data.repository.core.support.DefaultRepositoryMetadata;
@@ -90,43 +92,84 @@ public class ElasticsearchStringQueryUnitTests extends ElasticsearchStringQueryU
 	public void shouldReplaceParametersSpEL() throws Exception {
 
 		org.springframework.data.elasticsearch.core.query.Query query = createQuery("findByNameSpEL", "Luke");
+		String expected = """
+				{
+				  "bool":{
+				    "must":{
+				      "term":{
+				        "name": "Luke"
+				      }
+				    }
+				  }
+				}
+				""";
 
 		assertThat(query).isInstanceOf(StringQuery.class);
-		assertThat(((StringQuery) query).getSource())
-				.isEqualTo("{ \"bool\" : { \"must\" : { \"term\" : { \"name\" : \"Luke\" } } } }");
+		JSONAssert.assertEquals(((StringQuery) query).getSource(), expected, JSONCompareMode.NON_EXTENSIBLE);
 	}
 
 	@Test
 	public void shouldReplaceParametersSpELWithQuotes() throws Exception {
 
-		org.springframework.data.elasticsearch.core.query.Query query = createQuery("findByNameSpEL", "hello \"world\"");
+		org.springframework.data.elasticsearch.core.query.Query query = createQuery("findByNameSpEL",
+				"hello \"world\"");
+		String expected = """
+				{
+				  "bool":{
+				    "must":{
+				      "term":{
+				        "name": "hello \\"world\\""
+				      }
+				    }
+				  }
+				}
+				""";
 
 		assertThat(query).isInstanceOf(StringQuery.class);
-		assertThat(((StringQuery) query).getSource())
-				.isEqualTo("{ \"bool\" : { \"must\" : { \"term\" : { \"name\" : \"hello \\\"world\\\"\" } } } }");
+		JSONAssert.assertEquals(((StringQuery) query).getSource(), expected, JSONCompareMode.NON_EXTENSIBLE);
 	}
 
 	@Test
 	public void shouldUseParameterPropertySpEL() throws Exception {
 
 		org.springframework.data.elasticsearch.core.query.Query query = createQuery("findByParameterPropertySpEL",
-				new QueryParam("Luke"));
+				new QueryParameter("Luke"));
+		String expected = """
+				{
+				  "bool":{
+				    "must":{
+				      "term":{
+				        "name": "Luke"
+				      }
+				    }
+				  }
+				}
+				""";
 
 		assertThat(query).isInstanceOf(StringQuery.class);
-		assertThat(((StringQuery) query).getSource())
-				.isEqualTo("{ 'bool' : { 'must' : { 'term' : { 'name' : 'Luke' } } } }");
+		JSONAssert.assertEquals(((StringQuery) query).getSource(), expected, JSONCompareMode.NON_EXTENSIBLE);
 	}
 
 	@Test
 	public void shouldReplaceCollectionSpEL() throws Exception {
 
-		final List<String> anotherString = Arrays.asList("hello \"Stranger\"", "Another string");
+		final List<String> anotherString = List.of("hello \"Stranger\"", "Another string");
 		List<String> params = new ArrayList<>(anotherString);
 		org.springframework.data.elasticsearch.core.query.Query query = createQuery("findByNamesSpEL", params);
+		String expected = """
+				{
+				  "bool":{
+				    "must":{
+				      "term":{
+				        "name": ["hello \\"Stranger\\"", "Another string"]
+				      }
+				    }
+				  }
+				}
+				""";
 
 		assertThat(query).isInstanceOf(StringQuery.class);
-		assertThat(((StringQuery) query).getSource()).isEqualTo(
-				"{ 'bool' : { 'must' : { 'terms' : { 'name' : [\"hello \\\"Stranger\\\"\",\"Another string\"] } } } }");
+		JSONAssert.assertEquals(((StringQuery) query).getSource(), expected, JSONCompareMode.NON_EXTENSIBLE);
 	}
 
 	@Test
@@ -135,22 +178,43 @@ public class ElasticsearchStringQueryUnitTests extends ElasticsearchStringQueryU
 		final List<String> anotherString = List.of();
 		List<String> params = new ArrayList<>(anotherString);
 		org.springframework.data.elasticsearch.core.query.Query query = createQuery("findByNamesSpEL", params);
+		String expected = """
+				{
+				  "bool":{
+				    "must":{
+				      "term":{
+				        "name": []
+				      }
+				    }
+				  }
+				}
+				""";
 
 		assertThat(query).isInstanceOf(StringQuery.class);
-		assertThat(((StringQuery) query).getSource()).isEqualTo(
-				"{ 'bool' : { 'must' : { 'terms' : { 'name' : [] } } } }");
+		JSONAssert.assertEquals(((StringQuery) query).getSource(), expected, JSONCompareMode.NON_EXTENSIBLE);
 	}
 
 	@Test
 	public void shouldReplaceCollectionParametersSpEL() throws Exception {
 
-		final List<QueryParam> anotherString = List.of(new QueryParam("hello \"Stranger\""), new QueryParam("Another string"));
-		List<QueryParam> params = new ArrayList<>(anotherString);
+		final List<QueryParameter> anotherString = List.of(new QueryParameter("hello \"Stranger\""),
+				new QueryParameter("Another string"));
+		List<QueryParameter> params = new ArrayList<>(anotherString);
 		org.springframework.data.elasticsearch.core.query.Query query = createQuery("findByNamesParameterSpEL", params);
+		String expected = """
+				{
+				  "bool":{
+				    "must":{
+				      "terms":{
+				        "name": ["hello \\"Stranger\\"", "Another string"]
+				      }
+				    }
+				  }
+				}
+				""";
 
 		assertThat(query).isInstanceOf(StringQuery.class);
-		assertThat(((StringQuery) query).getSource()).isEqualTo(
-				"{ 'bool' : { 'must' : { 'terms' : { 'name' : [\"hello \\\"Stranger\\\"\",\"Another string\"] } } } }");
+		JSONAssert.assertEquals(((StringQuery) query).getSource(), expected, JSONCompareMode.NON_EXTENSIBLE);
 	}
 
 	@Test // #1790
@@ -258,20 +322,60 @@ public class ElasticsearchStringQueryUnitTests extends ElasticsearchStringQueryU
 		@Query("{ 'bool' : { 'must' : { 'term' : { 'name' : '?0' } } } }")
 		Person findByName(String name);
 
-		@Query("{ \"bool\" : { \"must\" : { \"term\" : { \"name\" : \"#{#name}\" } } } }")
+		@Query("""
+				{
+				  "bool":{
+				    "must":{
+				      "term":{
+				        "name": "#{#name}"
+				      }
+				    }
+				  }
+				}
+				""")
 		Person findByNameSpEL(String name);
 
-		@Query("{ 'bool' : { 'must' : { 'term' : { 'name' : '#{#param.q}' } } } }")
-		Person findByParameterPropertySpEL(QueryParam param);
+		@Query("""
+				{
+				  "bool":{
+				    "must":{
+				      "term":{
+				        "name": "#{#param.value}"
+				      }
+				    }
+				  }
+				}
+				""")
+		Person findByParameterPropertySpEL(QueryParameter param);
 
 		@Query("{ 'bool' : { 'must' : { 'terms' : { 'name' : ?0 } } } }")
 		Person findByNameIn(ArrayList<String> names);
 
-		@Query("{ 'bool' : { 'must' : { 'terms' : { 'name' : #{#names} } } } }")
+		@Query("""
+				{
+				  "bool":{
+				    "must":{
+				      "term":{
+				        "name": #{#names}
+				      }
+				    }
+				  }
+				}
+				""")
 		Person findByNamesSpEL(ArrayList<String> names);
 
-		@Query("{ 'bool' : { 'must' : { 'terms' : { 'name' : #{#names.![q]} } } } }")
-		Person findByNamesParameterSpEL(ArrayList<QueryParam> names);
+		@Query("""
+				{
+				  "bool":{
+				    "must":{
+				      "terms":{
+				        "name": #{#names.![value]}
+				      }
+				    }
+				  }
+				}
+				""")
+		Person findByNamesParameterSpEL(ArrayList<QueryParameter> names);
 
 		@Query(value = "name:(?0, ?11, ?1, ?2, ?3, ?4, ?5, ?6, ?7, ?8, ?9, ?10, ?11, ?0, ?1)")
 		Person findWithRepeatedPlaceholder(String arg0, String arg1, String arg2, String arg3, String arg4, String arg5,
